# Motor_C

./: .gitignore  CMakeLists.txt  main.c
.cache/clangd/index/: engine.c.7720059626723791.idx  engine.h.41BAE4A048EBFC93.idx  main.c.D24FFE3243E5CB85.idx  main.h.E8A0889EA2FC7FB4.idx  winsdl.c.42933182BBF4C9A1.idx  winsdl.h.B6FF8ACDA283AFFA.idx
include/: Engine.h  IndexBuffer.h  VertexBuffer.h  Window.h  defines_windows.h  engine.h  main.h  winsdl.h
include/gl_objects/: IndexBuffer.h  Program.h  ProgramManager.h  Shader.h  Texture.h  program.h
include/utils/: strings.h
include/utils/math/: Matrix.h
res/shaders/: shader_basico.shader  texture.shader
src/: Engine.c  IndexBuffer.c  VertexBuffer.c  Window.c  winsdl.c
src/gl_objects/: IndexBuffer.c  Program.c  ProgramManager.c  Shader.c  Texture.c  VertexBuffer.c  program.c  shader.c
src/utils/: Strings.c
src/utils/math/: Matrix.c
